--- a/ProjectWizard/WebContent/VAADIN/themes/projectwizard/projectwizard.scss
+++ b/ProjectWizard/WebContent/VAADIN/themes/projectwizard/projectwizard.scss
@@ -31,6 +31,11 @@
      border-left-style: none !important;
    }
    
+   .large_font_awesome .v-icon {
+     color: blue;
+     font-size: 20px;
+    }
+   
    .v-caption-awesomecaption .v-captiontext {
     font-family: FontAwesome;
    }
