--- a/ProjectWizard/WebContent/VAADIN/themes/projectwizard/projectwizard.scss
+++ b/ProjectWizard/WebContent/VAADIN/themes/projectwizard/projectwizard.scss
@@ -5,53 +5,94 @@
 /* This contains all of your theme.*/
 /* If somebody wants to extend the theme she will include this mixin. */
 @mixin projectwizard {
-  /* Include all the styles from the reindeer theme */
-  @include valo;
+	/* Include all the styles from the reindeer theme */
+@include valo;
+	/* Insert your theme rules here */
+.v-label-info {
+	border-color:#197DE1;
+	border-style: solid;
+	border-width: 1px;
+	box-shadow: 2px 2px 0 rgba(102, 153, 255, 0.5), -2px -2px 0
+		rgba(102, 153, 255, 0.5), -2px 2px 0 rgba(102, 153, 255, 0.5), 2px
+		-2px 0 rgba(102, 153, 255, 0.5);
+	border-radius: 8px;
+	padding: 8px;
+}
 
-  /* Insert your theme rules here */
-   .v-label-info {
-     border-color: #197DE1;
-     border-style: solid;
-     border-width: 1px;
-     box-shadow: 2px  2px 0 rgba(102, 153, 255, 0.5),
-     			-2px -2px 0 rgba(102, 153, 255, 0.5),
-     			-2px  2px 0 rgba(102, 153, 255, 0.5),
-     			 2px -2px 0 rgba(102, 153, 255, 0.5);
-     border-radius: 8px;
-     padding: 8px;
-   }
-   
-   .v-textfield-barcode-preview {
-     font-family: monospace;
-     font-size: 75% !important;
-     background-color: transparent !important;
-     border-top-style: none !important;
-     border-right-style: none !important;
-     border-bottom-style: none !important;
-     border-left-style: none !important;
-   }
-   
-   .large_font_awesome .v-icon {
-     color: blue;
-     font-size: 20px;
-    }
-   
-   .v-caption-awesomecaption .v-captiontext {
-    font-family: FontAwesome;
-   }
-     
-   .v-icon-bigicon {
-     color: #197DE1;
-     font-size: 30px;
-     border: none;
-     border-style: none;
-     background: transparent;
-     padding: 0;
-	 -webkit-border-radius: 0;
-     -moz-border-radius: 0;
-     border-radius: 0;
-     outline: none;
-    }
-    
- }
+.v-textfield-barcode-large {
+	font-family: monospace;
+	background-color: transparent !important;
+	border-top-style: none !important;
+	border-right-style: none !important;
+	border-bottom-style: none !important;
+	border-left-style: none !important;
+}
+
+.v-textfield-barcode-preview {
+	font-family: monospace;
+	font-size: 75% !important;
+	background-color: transparent !important;
+	border-top-style: none !important;
+	border-right-style: none !important;
+	border-bottom-style: none !important;
+	border-left-style: none !important;
+}
+
+.large_font_awesome .v-icon {
+	color: blue;
+	font-size: 20px;
+}
+
+.v-caption-awesomecaption .v-captiontext {
+	font-family: FontAwesome;
+}
+
+.v-icon-bigicon {
+	color: #197DE1;
+	font-size: 30px;
+	border: none;
+	border-style: none;
+	background: transparent;
+	padding: 0;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	border-radius: 0;
+	outline: none;
+}
+
+.v-table-cell-content-blue-hue1 {
+	color: black;
+	background: #d0d1e6;
+	font-weight: bold;
+}
+
+.v-table-cell-content-blue-hue2 {
+	color: black;
+	background: #a6bddb;
+	font-weight: bold;
+}
+
+.v-table-cell-content-blue-hue3 {
+	color: white;
+	background: #74a9cf;
+	font-weight: bold;
+}
+
+.v-table-cell-content-blue-hue4 {
+	color: white;
+	background: #3690c0;
+	font-weight: bold;
+}
+
+.v-table-cell-content-blue-hue5 {
+	color: white;
+	background: #0570b0;
+	font-weight: bold;
+}
+
+.v-table-cell-content-blue-hue6 {
+	color: white;
+	background: #034e7b;
+	font-weight: bold;
+}
 }
