--- a/ProjectWizard/WebContent/VAADIN/themes/projectwizard/styles.css
+++ b/ProjectWizard/WebContent/VAADIN/themes/projectwizard/styles.css
@@ -12413,6 +12413,15 @@ div.v-layout.v-horizontal.v-widget {
 	padding: 8px;
 }
 
+.projectwizard .v-textfield-barcode-large {
+	font-family: monospace;
+	background-color: transparent !important;
+	border-top-style: none !important;
+	border-right-style: none !important;
+	border-bottom-style: none !important;
+	border-left-style: none !important;
+}
+
 .projectwizard .v-textfield-barcode-preview {
 	font-family: monospace;
 	font-size: 75% !important;
@@ -12443,4 +12452,40 @@ div.v-layout.v-horizontal.v-widget {
 	-moz-border-radius: 0;
 	border-radius: 0;
 	outline: none;
+}
+
+.projectwizard .v-table-cell-content-blue-hue1 {
+	color: black;
+	background: #d0d1e6;
+	font-weight: bold;
+}
+
+.projectwizard .v-table-cell-content-blue-hue2 {
+	color: black;
+	background: #a6bddb;
+	font-weight: bold;
+}
+
+.projectwizard .v-table-cell-content-blue-hue3 {
+	color: white;
+	background: #74a9cf;
+	font-weight: bold;
+}
+
+.projectwizard .v-table-cell-content-blue-hue4 {
+	color: white;
+	background: #3690c0;
+	font-weight: bold;
+}
+
+.projectwizard .v-table-cell-content-blue-hue5 {
+	color: white;
+	background: #0570b0;
+	font-weight: bold;
+}
+
+.projectwizard .v-table-cell-content-blue-hue6 {
+	color: white;
+	background: #034e7b;
+	font-weight: bold;
 }
