--- a/ProjectWizard/WebContent/VAADIN/themes/projectwizard/projectwizard.scss
+++ b/ProjectWizard/WebContent/VAADIN/themes/projectwizard/projectwizard.scss
@@ -60,6 +60,18 @@
 	outline: none;
 }
 
+.v-table-cell-content-red-hue {
+	color: black;
+	background: #fc9272;
+	font-weight: bold;
+}
+
+.v-table-cell-content-yellow-hue {
+	color: black;
+	background: #fee391;
+	font-weight: bold;
+}
+
 .v-table-cell-content-blue-hue1 {
 	color: black;
 	background: #d0d1e6;
